--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -7,8 +7,11 @@ on:
       - feature/**
 
 permissions:
+  actions: read
   contents: write
   pull-requests: write
+  checks: write
+  security-events: write
 
 jobs:
   # ═══════════════════════════════════════════════════════════
